updated with link to image

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
         <meta charset="utf-8">
         <title>Geoffrey Metzger's personal site</title>
     </head>
-
     <body>
-        <h1>Geoffrey Metzger</h1>
+      <table cellspacing= "20">
+        <tr>
+          <td><img src = "https://scontent-ort2-2.xx.fbcdn.net/v/t1.6435-9/s1080x2048/178528748_10226838105247349_9202732427242733029_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=730e14&_nc_ohc=rF0AGOffUmIAX-lFBbi&_nc_ht=scontent-ort2-2.xx&oh=ec48ee23cbc5f20199955f2f6f0933ee&oe=61A7F401" height= 150px; width= auto; id= "mainImage"</td>
+          <td><h1>Geoffrey  Metzger</h1>
         <h2><em>web developer</em></h2>
-        <p>I am a web developer that loves creating dynamic webpages and web apps</p>
+        <p>I am a web developer that loves creating dynamic webpages and web apps</p></td>
+        </tr>
+      </table>
+        
         <hr />
         <h3>EDUCATION</h3>
         <hr />
@@ -58,5 +63,22 @@
         <a href="hobbies.html">My Hobbies</a>
         <br />
         <a href="contact.html">Contact Me</a>
+      <hr />
+      <h3>SKILLS</h3>
+      <hr />
+      <table border = "20px" padding = 10px>
+        <tr>
+          <td>HTML5</td>
+ <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
+          <td>CSS3</td>
+          <td>&#11088;&#11088;&#11088;&#11088;&#11088;</td>
+        </tr>
+        <tr>
+          <td>JavaScript</td>
+          <td>&#11088;&#11088;&#11088;&#11088;	&#9957;</td>
+          <td>Java</td>
+          <td>&#11088;&#11088;&#11088;	&#9957;	&#9957;</td>
+        </tr>
+      </table>
     </body>
 </html>
